test/valid/for/forBasic.wacc
# simple for loop

# Output:
# #empty#

# Program:

begin
  for (int i = 0; i < 10; i = i + 1) do
    skip
  done
end