test/invalid/semanticErr/for/forInitChar.wacc
begin
  for (char i = '3'; i < 10; i = i + 1) do
    print i
  done
end